--- a/page1.html
+++ b/page1.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="page2.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section form1 mbr-after-navbar" id="form1-5" data-rv-view="44" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="mbr-section form1 mbr-after-navbar" id="form1-5" data-rv-view="44" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACTEER MIJ!">
 
-                        <input type="hidden" value="G+YBjijhzdrZpVjCyiefJh6O1nBFBi6iPOmCTXzbNQWzZynEzrlqEzNDCIqfMudhN2TRwYmzkSEMeZSRxoQ4rlkR5bdurIE4kJuoK0BrTZCfPUeO1ib+0UPcwBOSECSi" data-form-email="true">
+                        <input type="hidden" value="vNB/fa9UXpsYkdOiYuHt1lKeiCT2+Je6kDPwlx1V9lBOK0dlbNglPGDhiZgXp0nJzObGZMvXmb8stIMeXCeamUfrV8s9/c0wrQB8k4OOINJ6lcKeXdwnnmTqVEWfmPXe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
