create github pages

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="page2.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="projects.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="analog.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-7" data-rv-view="111" style="background-image: url(assets/images/dourpic-1506x1125.jpg);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-7" data-rv-view="111" style="background-image: url(assets/images/dourpic-1506x1125.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
