--- a/analog.html
+++ b/analog.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="page2.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="projects.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="analog.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-c" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-c" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
