--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="page2.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="page1.html">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">DATABANK</a><div class="dropdown-menu"><a class="dropdown-item" href="projects.html" aria-expanded="false">PROJECTS</a><a class="dropdown-item" href="analog.html">ANALOG</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">ABOUT ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section form1 mbr-after-navbar" id="form1-5" data-rv-view="118" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form1 mbr-after-navbar" id="form1-5" data-rv-view="118" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACTEER MIJ!">
 
-                        <input type="hidden" value="n52XtjkipdgSGsQQeSKKQ3XrqnuQjelvd47kIDGh4HSq9fcQHifRqc4RmRDWi4IhcoxoofsFNxXEeK92cpPia1ZirnAMHNbTWgl2LIj0yDguazmKrxUMbTRSF5c4SQoG" data-form-email="true">
+                        <input type="hidden" value="RbQNjulZ6FwYmTC7LIh5LW8JGQ1PZY18bEtdeRMpWq42XNJg8pnMvtGGLSHB7fFTQ1O00Hw1SHz4/FkiWDP22A2iMu0dyqQx6zvoM23zPzwFgxgoFZlYr9179xAN9mvn" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
