--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-6" data-rv-view="109">
+<section id="ext_menu-6" data-rv-view="123">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-7" data-rv-view="111" style="background-image: url(assets/images/dourpic-1506x1125.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-7" data-rv-view="125" style="background-image: url(assets/images/dourpic-1506x1125.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -99,7 +99,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-8" data-rv-view="114" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-8" data-rv-view="128" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
