--- a/analog.html
+++ b/analog.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-<section id="ext_menu-a" data-rv-view="39">
+<section id="ext_menu-a" data-rv-view="47">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-c" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-c" data-rv-view="49" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-b" data-rv-view="43" style="background-color: rgb(255, 255, 255); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-b" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 1.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
